[package]
name = "boohashing"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BooHashing: A spooktacular Rust CLI app for file hashing. Supports multiple hashing algorithms. It's hashing made easy, no tricks just treats!"
repository = "https://github.com/amonteir/boohashing"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
digest = "0.9.0"